--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@ a {
 .header-inner{
   display: flex;
   gap: 0.5rem;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: flex-start;
   height: fit-content;
 }
@@ -271,7 +271,7 @@ li{
 .nav-items-1{
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
   background: transparent ;
