--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ a {
   display: flex;
   gap: 0.5rem;
   justify-content: flex-start;
-  align-items: flex-start;
+  /* align-items: center; */
   height: fit-content;
 }
 
